# Taller-TP-Final

./: (borrar)MainWindow.cpp  .gitattributes  .gitignore  Banker.cpp  Banker.h  CMakeLists.txt  Camera.cpp  Camera.h  ClientConnector.cpp  ClientConnector.h  ClientController.cpp  ClientController.h  ClientProtocol.cpp  ClientProtocol.h  Configuration.cpp  Configuration.h  Deserializer.cpp  Documentacion Técnica.md  EmptyException.cpp  EmptyException.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  ExpBar.cpp  ExpBar.h  FilteredImage.h  Game.cpp  Game.h  Goblin.cpp  Goblin.h  GraphicInventory.cpp  GraphicInventory.h  Healer.cpp  Healer.h  Image.cpp  (+92 more)
Graficos/psd_editables/: Cargando.psd  ImagenCargando1.psd
Programas de prueba/: prueba_movimiento.cpp  serverdeprueba
Programas de prueba/pruebaqt/: LogIn.h  main.cpp
client_src/: Banker.cpp  Banker.h  BlockingMsgQueue.cpp  BlockingMsgQueue.h  Camera.cpp  Camera.h  ClientConnector.cpp  ClientConnector.h  ClientController.cpp  ClientInitializer.cpp  ClientProtocol.cpp  ClientProtocol.h  Configuration.cpp  Deserializer.cpp  Deserializer.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Equippable.cpp  Equippable.h  EventManager.cpp  EventManager.h  ExpBar.cpp  ExpBar.h  FilteredImage.cpp  Goblin.cpp  Goblin.h  GraphicInventory.cpp  GraphicInventory.h  Healer.cpp  Healer.h  Image.cpp  Item.cpp  Item.h  Layout.cpp  Layout.h  LayoutManager.cpp  LayoutManager.h  LogIn.cpp  (+63 more)
client_src/assets/: BlockingMsgQueue.cpp  ProtMsgQueue.cpp  Socket.cpp  Thread.cpp
client_src/client_controller/: EventManager.cpp  ModelController.cpp  Receiver.cpp  Renderer.cpp  Sender.cpp
client_src/entity/: Attack.cpp  Entity.cpp  EntityManager.cpp  Equippable.cpp  Item.cpp  Mob.cpp  NPC.cpp  Player.cpp
client_src/errors/: OSError.cpp  QueueClosedException.cpp  QuitException.cpp  SDLError.cpp  SocketException.cpp
client_src/headers/: Attack.h  Mob.h  (+26 more)
common/: Socket.cpp  SocketException.cpp  Thread.cpp
config/: gameConfig.json
documentacion/: Documentacion Técnica.md  Manual de Usuario.md  Manual de proyecto.md  Protocolo.md
json/: arbol2.json  arbol3.json  arbol4.json  arbol5.json  arbol6.json  arbol9.json  cactus.json  caminoazul.json  caminodesiertopasto.json  caminopasto3.json  caminopiedrabuena.json  casagrande1.json  casapiedra.json  cofremadera.json  columnablanca.json  columnadesierto.json  cueva1.json  cueva10.json  cueva11.json  cueva12.json  cueva13.json  cueva14.json  cueva2.json  cueva3.json  cueva4.json  cueva5.json  cueva6.json  cueva7.json  cueva8.json  cueva9.json  esfinge1.json  esqueleto1.json  estatuaangel.json  flores1.json  fuenteazul.json  fuentegrande.json  map.json  muropiedrafrente.json  pasto1.json  pasto2.json  (+13 more)
pruebaqt/: Background.qrc  CMakeLists.txt  LogIn.cpp  LogIn.h  login.ui  ui_login.h
pruebaqt (copia)/: CMakeLists.txt  LogIn.cpp  LogIn.h
server_src/: CMakeLists.txt  ChatMessageParser.cpp  ChatMessageParser.h  Condition.cpp  Condition.h  Configuration.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameState.cpp  GameState.h  IsAlive.cpp  IsAlive.h  Monster.cpp  Monster.h  MonsterType.cpp  MonsterType.h  Persistor.h  PlayerNet.cpp  PlayerNet.h  PlayerState.cpp  PlayerState.h  PlayerTest.cpp  PlayerTestNet.cpp  PlayerTestNet.h  README.md  Server.cpp  Server.h  ServerEventHandler.cpp  ServerEventHandler.h  SocketException.cpp  Spider.h  Thread.cpp  Thread.h  common_client_handler.cpp  common_client_handler.h  jsoncpp.cpp  server_acceptor.cpp  server_acceptor.h  (+1 more)
server_src/Communication/: ClosedQueueException.cpp  ClosedQueueException.h  MessageDispatcher.cpp  MessageDispatcher.h  ProtectedQueue.cpp  ProtectedQueue.h  ProtectedStrQueue.cpp  ProtectedStrQueue.h  ServerReceiver.cpp  ServerReceiver.h  ServerSender.cpp  ServerSender.h  Socket.cpp
server_src/Entities/: Bank.cpp  BankLocker.cpp  Banker.cpp  Class.cpp  Class.h  Entity.cpp  Entity.h  GhostState.cpp  GhostState.h  ImmobilizedState.cpp  MeditationState.cpp  MeditationState.h  Merchant.cpp  Monster.cpp  Monster.h  MonsterType.cpp  MonsterType.h  NPC.cpp  NormalState.cpp  NormalState.h  PlayerNet.cpp  PlayerNet.h  PlayerState.cpp  PlayerState.h  Priest.cpp  Race.cpp  Race.h
server_src/Events/: ClickEvent.cpp  ClickEvent.h  EntityClick.cpp  Event.cpp  Event.h  InventoryClick.cpp  MessageSent.cpp  PlayerConnection.cpp  ServerEventHandler.cpp  ServerEventHandler.h  ServerEventListener.cpp  ServerEventListener.h  UserMoved.cpp  UserMoved.h
server_src/Items/: Armor.cpp  Armor.h  GoldDrop.cpp  Helmet.cpp  Helmet.h  HpPotion.cpp  Inventory.cpp  Item.cpp  Item.h  ManaPotion.cpp  Shield.cpp  Shield.h  Weapon.cpp  Weapon.h  Wearable.cpp  Wearable.h
server_src/Utils/: ChatMessageParser.cpp  Configuration.cpp  jsoncpp.cpp  sha256.cpp  sha256.h
server_src/config/: Equations.cpp  Equations.h  gameConfig.json
server_src/headers/: Acceptor.h  Armor.h  Bank.h  BankLocker.h  Banker.h  ChatMessageParser.h  Class.h  ClientHandler.h  Condition.h  Configuration.h  Entity.h  EntityClick.h  Equations.h  Game.h  GameState.h  GhostState.h  GoldDrop.h  Helmet.h  HpPotion.h  ImmobilizedState.h  Inventory.h  InventoryClick.h  IsAlive.h  Item.h  JsonError.h  ManaPotion.h  Map.h  MasterFactory.h  MeditationState.h  Merchant.h  MessageDispatcher.h  MessageSent.h  Monster.h  MonsterType.h  NPC.h  NormalState.h  Persistor.h  PlayerConnection.h  PlayerNet.h  PlayerState.h  (+14 more)
server_src/json/: arbolvida.json  caminodesiertopasto2.json  caminointerseccion.json  caminopasto4.json  casa1.json  desierto.json  desiertopasto.json  esfinge2.json  muropiedrahorizontal.json  pastooscuro1.json  piramide.json  riodesierto.json  troncos.json  tumba1.json  vallaabierta1.json  vallamaderaborde1.json
server_src/resources/: Acceptor.cpp  Acceptor.h  ClientHandler.cpp  ClientHandler.h  Condition.cpp  GameState.cpp  GameState.h  IsAlive.cpp  JsonError.cpp  Map.cpp  MasterFactory.cpp  Persistor.cpp  ServerEventHandler.cpp  ServerEventHandler.h  ServerProtocol.cpp  ServerProtocol.h  Thread.cpp
suppression/: README.md  parser.py
(+88 files in other folders)
